Add storage index support for index only listings.
